--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
-    <title>Em busca da cidade perdida</title>
+    <title>Em busca de uma cidade escondida</title>
 </head>
 <body>
     <main>
@@ -18,7 +18,7 @@
             <button class="btn-proximo" data-proximo="2">Pernambuco</button>
         </div>
         <div class="passo" id="passo-1">
-            <p>Você começa sua jornada no Rio de Janeiro, subindo o Pico da Tijuca ao amanhecer para encontrar a primeira pista.</p>
+            <p>Você começa sua jornada no monte, na tríplice fronteira entre Brasil, Venezuela e Guiana, subindo o monte Roraima ao amanhecer para encontrar a primeira pista.</p>
             <button class="btn-proximo" data-proximo="3">Procurar a pista no topo do pico</button>
             <button class="btn-proximo" data-proximo="4">Desistir e voltar para casa</button>
         </div>
@@ -28,7 +28,7 @@
             <button class="btn-proximo" data-proximo="6">Explorar as praias próximas</button>
         </div>
         <div class="passo" id="passo-3">
-            <p>No topo do Pico da Tijuca, você encontra uma antiga inscrição apontando que a próxima pista está
+            <p>No topo do monte Roraima, você encontra uma antiga inscrição apontando que a próxima pista está
                 localizada no Amazonas.</p>
             <button class="btn-proximo" data-proximo="7">Seguir para o Amazonas</button>
         </div>
